--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>App Rose</title>
 
-<head>
-  <meta charset="utf-8" />
-  <title>Ionic App</title>
+    <base href="/" />
 
-  <base href="/" />
+    <meta name="color-scheme" content="light dark" />
+    <meta
+      name="viewport"
+      content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-tap-highlight" content="no" />
 
-  <meta name="color-scheme" content="light dark" />
-  <meta name="viewport" content="viewport-fit=cover, width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <meta name="format-detection" content="telephone=no" />
-  <meta name="msapplication-tap-highlight" content="no" />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assets/icon/logo_16.png?"
+      sizes="16x16"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      href="./assets/icon/logo_32.png?"
+      sizes="32x32"
+    />
 
-  <link rel="icon" type="image/png" href="assets/icon/favicon.png" />
+    <link
+      rel="apple-touch-icon"
+      sizes="64x64"
+      href="./assets/icon/logo_64.png"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="128x128"
+      href="./assets/icon/logo_128.png"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/icon/logo_180.png"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="./assets/icon/logo_152.png"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="./assets/icon/logo_114.png"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="./assets/icon/logo_72.png"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="./assets/icon/logo_144.png"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="./assets/icon/logo_60.png"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="./assets/icon/logo_120.png"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="./assets/icon/logo_76.png"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="./assets/icon/logo_57.png"
+      type="image/png"
+    />
+    <link
+      href="./assets/icon/logo_2048.png"
+      sizes="2048x2048"
+      rel="apple-touch-startup-image"
+      type="image/png"
+    />
+    <link
+      href="./assets/icon/logo_1668.png"
+      sizes="1668x1668"
+      rel="apple-touch-startup-image"
+      type="image/png"
+    />
+    <link
+      href="./assets/icon/logo_1536.png"
+      sizes="1536x1536"
+      rel="apple-touch-startup-image"
+      type="image/png"
+    />
+    <link
+      href="./assets/icon/logo_1125.png"
+      sizes="1125x1125"
+      rel="apple-touch-startup-image"
+      type="image/png"
+    />
+    <link
+      href="./assets/icon/logo_1242.png"
+      sizes="1242x1242"
+      rel="apple-touch-startup-image"
+      type="image/png"
+    />
+    <link
+      href="./assets/icon/logo_750.png"
+      sizes="750x750"
+      rel="apple-touch-startup-image"
+      type="image/png"
+    />
+    <link
+      href="./assets/icon/logo_640.png"
+      sizes="640x640"
+      rel="apple-touch-startup-image"
+      type="image/png"
+    />
 
-  <!-- add to homescreen for ios -->
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-</head>
+    <!-- add to homescreen for ios -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
-  <app-root></app-root>
-</body>
-
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
